--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 streamlit
-chromadb
+PyMuPDF
 sentence-transformers
+faiss-cpu
 google-generativeai
-PyPDF2
-python-dotenv
-pysqlite3-binary
-huggingface-hub
-pysqlite3-binary
