--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.32.2
-PyPDF2==3.0.1
-langchain==0.1.14
-langchain-community==0.0.29
-langchain-google-genai==0.0.8
-google-generativeai==0.3.2
-faiss-cpu==1.7.4
-numpy==1.24.4
+streamlit
+PyPDF2
+langchain
+langchain-community
+langchain-google-genai
+google-generativeai
+faiss-cpu
+numpy
